--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Darwin Quotes v26.1</title>
+  <title>Darwin Quote Generator</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -129,7 +129,7 @@
   </div>
 
   <footer>
-    Version 26.1 • <a href="https://henry-598.github.io/darwin-quotes/terms-conditions.html" target="_blank">Terms & Conditions</a>
+    Version 26.1.0 • <a href="https://henry-598.github.io/darwin-quotes/terms-conditions.html" target="_blank">Terms & Conditions</a>
   </footer>
 
   <script>
@@ -216,3 +216,4 @@
   </script>
 </body>
 </html>
+
