--- a/beta-version.html
+++ b/beta-version.html
@@ -101,12 +101,13 @@
   <div class="card">
     <h1>No Live Beta Version</h1>
     <p>The Darwin Quote Generator beta isn’t live yet.<br>
-    The next live beta will be <strong>Version 26.1.0 Beta</strong>, which will be available <strong>29 November 2025</strong>.<br>
-    The next live beta will be <strong>Version 26.1.0 Beta</strong>, which will be available to the general public on the <strong>29 November 2025</strong>.<br>
-    If you want early access to the next beta, please email me:</p>
+    The next live beta will be <strong>Version 26.2.0 Beta</strong>, which will be available <strong>29 November 2025</strong>.<br>
     <a class="button" href="mailto:henry.hughes598@gmail.com?subject=Early Access Request">Request Early Access</a>
     <br>
     <a class="button" href="https://henry-598.github.io/darwin-quotes" target="_blank">See the Darwin Quote Generator</a>
+    <br>
+    <!-- Feature Request Button -->
+    <a class="button" href="mailto:henry.hughes598@gmail.com?subject=Feature%20Request%20for%20Next%20Version&body=Please%20describe%20your%20feature%20idea%20below:%0A%0A">Request a Feature for Next Version</a>
   </div>
   <div class="version">Version 26.0.1</div>
 
