--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Darwin Quotes v26.1</title>
+  <title>Darwin Quote Generator</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -149,7 +149,7 @@
   </div>
 
   <footer>
-    Version 26.1.2 • <a href="https://henry-598.github.io/darwin-quotes/terms-conditions.html" target="_blank" rel="noopener">Terms & Conditions</a>
+    Version 26.1.3 • <a href="https://henry-598.github.io/darwin-quotes/terms-conditions.html" target="_blank" rel="noopener">Terms & Conditions</a>
   </footer>
 
   <script>
@@ -290,13 +290,13 @@
       quoteCooldown = true;
       const btn = document.getElementById("newQuoteBtn");
       btn.disabled = true;
-      btn.textContent = "Wait 5 seconds...";
+      btn.textContent = "Wait 3 seconds...";
 
       setTimeout(() => {
         quoteCooldown = false;
         btn.disabled = false;
         btn.textContent = "New Quote";
-      }, 5000);
+      }, 3000);
 
       // The rest of your quote code:
       const weightedRarities = [
@@ -431,3 +431,4 @@
   </script>
 </body>
 </html>
+
