--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   </div>
 
   <footer>
-    Version 26.1.3 • <a href="https://henry-598.github.io/darwin-quotes/terms-conditions.html" target="_blank" rel="noopener">Terms & Conditions</a>
+    Version 26.1.4 • <a href="https://henry-598.github.io/darwin-quotes/terms-conditions.html" target="_blank" rel="noopener">Terms & Conditions</a>
   </footer>
 
   <script>
@@ -290,13 +290,13 @@
       quoteCooldown = true;
       const btn = document.getElementById("newQuoteBtn");
       btn.disabled = true;
-      btn.textContent = "Wait 3 seconds...";
+      btn.textContent = "Wait 1 second...";
 
       setTimeout(() => {
         quoteCooldown = false;
         btn.disabled = false;
         btn.textContent = "New Quote";
-      }, 3000);
+      }, 1000);
 
       // The rest of your quote code:
       const weightedRarities = [
@@ -431,4 +431,5 @@
   </script>
 </body>
 </html>
+
 
